name:                argon
version:             0.4.1.0
synopsis:            Measure your code's complexity
homepage:            http://github.com/rubik/argon
bug-reports:         http://github.com/rubik/argon/issues
license:             ISC
license-file:        LICENSE
author:              Michele Lacchia
maintainer:          michelelacchia@gmail.com
copyright:           2015 Michele Lacchia
category:            Development, Static Analysis
build-type:          Simple
cabal-version:       >=1.18
description:
    Argon performs static analysis on your code in order to compute cyclomatic
    complexity. It is a quantitative measure of the number of linearly
    indipendent paths through the code.
    .
    The intended usage is through Argon's executable, which accepts a list of
    files or directories to analyze. The data can be optionally exported to
    JSON.
extra-source-files:
    stack.yaml
    stack-7.8.yaml
    README.md
    CHANGELOG.md
    USAGE.txt
    test/data/*.hs
    test/data/*.h
    test/data/*.cabal
    test/data/include/*.h
    test/tree/*.hs
    test/tree/*.txt
    test/tree/sub/*.hs
    test/tree/sub2/*.hs
tested-with: GHC >= 8.0.2 && GHC < 9

library
  hs-source-dirs:      src
  exposed-modules:     Argon
  other-modules:       Argon.Parser
                       Argon.Visitor
                       Argon.Results
                       Argon.Formatters
                       Argon.Types
                       Argon.Preprocess
                       Argon.Loc
                       Argon.Cabal
                       Argon.SYB.Utils
                       Argon.Walker
  build-depends:       base             >=4.7    && <5
                     , ansi-terminal
                     , aeson
                     , bytestring
                     , pipes
                     , pipes-group
                     , pipes-safe
                     , pipes-bytestring
                     , lens-simple
                     , ghc
                     , ghc-boot
                     , ghc-paths
                     , ghc-syb-utils
                     , syb
                     , Cabal
                     , containers
                     , directory
                     , system-filepath
                     , dirstream
                     , filepath
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  if impl(ghc < 7.8)
    buildable: False

executable argon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base             >=4.7    && <5
                     , argon            -any
                     , docopt           >=0.7
                     , pipes            >=4.1
                     , pipes-safe       >=2.2
  default-language:    Haskell2010
  if impl(ghc < 7.8)
    buildable: False

test-suite argon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ArgonSpec
  build-depends:       base             >=4.7    && <5
                     , argon
                     , ansi-terminal
                     , ghc
                     , aeson
                     , hspec
                     , QuickCheck
                     , filepath
                     , pipes
                     , pipes-safe
  ghc-options:         -Wall -Werror
                       -threaded -rtsopts -with-rtsopts=-N
                       
  default-language:    Haskell2010
  if impl(ghc < 7.8)
    buildable: False

test-suite style
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base
                     , hlint
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Werror

source-repository head
  type:     git
  location: https://github.com/rubik/argon
