name:                ftw
version:             0.0
author:              Michele Lacchia
build-type:          Simple
cabal-version:       >=1.18

library
  hs-source-dirs:      .
  other-extensions:    CPP
  build-depends:       base             >=4.7    && <5
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc < 7.8)
    buildable: False

source-repository head
  type:     git
  location: https://github.com/rubik/argon
